added booking history

--- a/Udajahaja/udajahaja/src/app/components/booking-history/booking-history.component.html
+++ b/Udajahaja/udajahaja/src/app/components/booking-history/booking-history.component.html
@@ -5,6 +5,38 @@
     <app-header></app-header>
 
 </div>
-<div  style="position: absolute;top: 40%;left: 30%;">
-<h1>Booking History</h1>
-</div>
+
+<body>
+    <div>
+        <label>
+            <h1>Enter Email Id To see booking History</h1>
+        </label>
+        <input type="text" />
+        <button>Search</button>
+    </div>
+    <br><br><br>
+
+    <div class="historyContainer">
+
+        <div class="ticket">
+          <div class="lines">
+            PNR Number&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:122334455
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+            Bhubaneswar &nbsp;&nbsp;-->&nbsp;&nbsp;Hyderabad
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+            Ticket Status: &nbsp;&nbsp;&nbsp;Active
+          </div>
+          <div class="lines">
+            Flight Number&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:122334455
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+            Arrival Time &nbsp;&nbsp;-->04:30
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            Departure Time &nbsp;&nbsp;-->04:30
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+            
+          </div>
+        </div>
+        <div class="separator"></div>
+    </div>
+
+</body>
