--- a/Udajahaja/udajahaja/src/app/components/flight-schedule/flight-schedule.component.html
+++ b/Udajahaja/udajahaja/src/app/components/flight-schedule/flight-schedule.component.html
@@ -18,7 +18,7 @@
                         <div>
                             <label>Select Flight Nmber</label>
                             <select style="width: 100px;" id="cars" name="cars" formControlName="flightId" >
-                                <option *ngFor="let flight of aeroplane" value="{{flight.flightId}}">{{flight.aeroplaneNumber}}</option>
+                                <option *ngFor="let flight of aeroplane" value="{{flight.id}}">{{flight.aeroplaneNumber}}</option>
                             </select>
                         </div>
                         <div>
