--- a/Udajahaja/udajahaja/src/app/components/edit-airlines/edit-airlines.component.html
+++ b/Udajahaja/udajahaja/src/app/components/edit-airlines/edit-airlines.component.html
@@ -46,8 +46,8 @@
        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
        <div style="display: inline-block;right: 0%;">
-        <button (click)="editAirline()" style="width: 100px;height: 50px;background-color: cornflowerblue;color: white;">
-            Edit Airline
+        <button (click)="blockAirline(airline.id)" style="width: 100px;height: 50px;background-color: cornflowerblue;color: white;">
+            {{status}} Airline
         </button>
        </div>
       
