--- a/Udajahaja/udajahaja/src/app/components/reports/reports.component.html
+++ b/Udajahaja/udajahaja/src/app/components/reports/reports.component.html
@@ -2,4 +2,10 @@
     
     <app-admin-header></app-admin-header>   
 </div>
-<h1 style="position: absolute;top: 25%;text-align: center;">Report page</h1>
+<h1 style="position: absolute;top: 25%;left: 30%">Report page</h1>
+<div class="buttonContainer">
+<div>Click here to download the report</div>
+<div><button 
+    (click)="generateReport()"
+    style="background-color: cornflowerblue;color: white;width: 100px;height: 80px;">Download</button></div>
+</div>
